--- a/portfolio01-main/index.html
+++ b/portfolio01-main/index.html
@@ -116,10 +116,11 @@
                      -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"
 									/>
 									<image
+										style="transform: scale(0.8)"
 										class="home__blob-img"
-										x="-79"
-										y="-46"
-										xlink:href="assets/img/Pro.jpg"
+										x="-55"
+										y="-15"
+										xlink:href="assets/img/Pro.png"
 									/>
 								</g>
 							</svg>
@@ -154,11 +155,11 @@
 				<span class="section__subtitle">My introduction</span>
 
 				<div class="about__container container grid">
-					<img src="assets\img\about.jpg" alt="" class="about__img" />
+					<img src="assets\img\Pro.png" alt="" class="about__img" />
 
 					<div class="about__data">
 						<p class="about__description">
-							Experienced full stack developer with 3 years of expertise in
+							Experienced full stack developer with 3+ years of expertise in
 							building web and mobile applications. <br />Strong foundation in
 							both front-end and back-end development.<br />
 							Proactive team player with a record of successfully delivering
@@ -757,29 +758,58 @@
 				<div class="portfolio__container container swiper-container">
 					<div class="swiper-wrapper">
 						<!-- ------------------------portfollio 1-------------------- -->
+
 						<div class="portfolio__content grid swiper-slide">
-							<img src="assets/img/portfolio5.png" class="portfolio__img" />
+							<img src="assets/img/portfolio1.png" class="portfolio__img" />
 
 							<div class="portfolio__data">
-								<h3 class="portfolio__title">DarkSurfer-Extension</h3>
-								<p class="portfolio__description">
-									DarkSurfer-Extension, is a project based on the application of
-									advanced Language Models LMs to detect and eliminate dark
-									patterns on websites. It aims to improve user-awareness,
-									exposing real-time of devious design practices in situ. It
-									helps make the internet more user-friendly by using its novel
-									LMs and popular LM-based models, such as RoBERTa, BERT, and
-									XLNet.
-								</p>
+								<h3 class="portfolio__title">Blue Amazona</h3>
+
+								<ul class="services__modal-services grid">
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+
+										<p style="margin-left: 0.5rem">
+											An Amazon clone using the MERN with Bootstrap to manage
+											the front-end
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Node and ExpressJS to manage the backend with a MongoD.B,
+											with middleware authentications
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											User authentications and authorization implemented (normal
+											and admin user) using JWT
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Users can sign-up/login, add products to the cart, search
+											products by name or/and category, order and pay using
+											Stripe or PayPal
+										</p>
+									</li>
+								</ul>
+
 								<a
-									href="https://github.com/Venkateeshh/DarkSurfer-Extension"
+									style="margin-top: 2rem; margin-right: 0.5rem"
+									target="_blank"
+									href="https://github.com/Mohamed-Ebeid/mern_Blue_Amazona"
 									class="button button--flex button--small portfolio__button"
 								>
 									GitHub Repository
 									<i class="uil uil-external-link-alt button__icon"></i>
 								</a>
 								<a
-									href="https://darksurfer.streamlit.app/"
+									target="_blank"
+									href="https://blue-frontend.vercel.app/"
 									class="button button--flex button--small portfolio__button"
 								>
 									See Live
@@ -790,29 +820,54 @@
 						<!-- ------------------------portfollio 2-------------------- -->
 
 						<div class="portfolio__content grid swiper-slide">
-							<img src="assets/img/portfolio1.png" class="portfolio__img" />
+							<img src="assets/img/portfolio5.png" class="portfolio__img" />
 
 							<div class="portfolio__data">
-								<h3 class="portfolio__title">
-									Responsive-Weather-Forecast-Website
-								</h3>
-								<p class="portfolio__description">
-									This project is a weather website that provides live weather
-									updates and forecasts based on your location. Stay informed
-									about current weather conditions, temperature, and more.
-									Explore interactive maps, hourly/daily forecasts, and helpful
-									insights. Stay ahead of the forecast and make the most of your
-									day!
-								</p>
+								<h3 class="portfolio__title">Larajobs</h3>
+
+								<ul class="services__modal-services grid">
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+
+										<p style="margin-left: 0.5rem">
+											A Laravel 9 web application to apply for jobs using
+											Tailwind CSS to manage the layout
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Guests can see the listings and filter them (search and/or
+											tags) with pagination implemented
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											User can only edit and delete their posted jobs
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Logged in users can see their name on top with a page for
+											their posted jobs and a logout button
+										</p>
+									</li>
+								</ul>
+
 								<a
-									href="https://github.com/Venkateeshh/Weather-App"
+									style="margin-top: 2rem; margin-right: 0.5rem"
+									target="_blank"
+									href="https://github.com/Mohamed-Ebeid/Larajobs"
 									class="button button--flex button--small portfolio__button"
 								>
 									GitHub Repository
 									<i class="uil uil-external-link-alt button__icon"></i>
 								</a>
 								<a
-									href="https://venkateeshh.github.io/Weather-App/"
+									target="_blank"
+									href="https://larajobs.vercel.app/"
 									class="button button--flex button--small portfolio__button"
 								>
 									See Live
@@ -820,29 +875,57 @@
 								</a>
 							</div>
 						</div>
-
 						<!-- ------------------------portfollio 3-------------------- -->
+
 						<div class="portfolio__content grid swiper-slide">
-							<img src="assets/img/portfolio2.png" class="portfolio__img" />
+							<img src="assets/img/portfolio5.png" class="portfolio__img" />
 
 							<div class="portfolio__data">
-								<h3 class="portfolio__title">Spotify-Clone</h3>
-								<p class="portfolio__description">
-									Spotify Clone is a web app developed using HTML, CSS, and
-									JavaScript. It recreates Spotify's interface and features,
-									allowing users to browse, search, and play songs, create
-									playlists, and discover new music. Responsive design ensures a
-									seamless experience on any device. Contributions are welcome!
-								</p>
+								<h3 class="portfolio__title">Larajobs</h3>
+
+								<ul class="services__modal-services grid">
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+
+										<p style="margin-left: 0.5rem">
+											A Laravel 9 web application to apply for jobs using
+											Tailwind CSS to manage the layout
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Guests can see the listings and filter them (search and/or
+											tags) with pagination implemented
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											User can only edit and delete their posted jobs
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Logged in users can see their name on top with a page for
+											their posted jobs and a logout button
+										</p>
+									</li>
+								</ul>
+
 								<a
-									href="https://github.com/Venkateeshh/Spotify-Clone"
+									style="margin-top: 2rem; margin-right: 0.5rem"
+									target="_blank"
+									href="https://github.com/Mohamed-Ebeid/Larajobs"
 									class="button button--flex button--small portfolio__button"
 								>
 									GitHub Repository
 									<i class="uil uil-external-link-alt button__icon"></i>
 								</a>
 								<a
-									href="https://venkateeshh.github.io/Spotify-Clone/"
+									target="_blank"
+									href="https://larajobs.vercel.app/"
 									class="button button--flex button--small portfolio__button"
 								>
 									See Live
@@ -851,58 +934,56 @@
 							</div>
 						</div>
 						<!-- ------------------------portfollio 4-------------------- -->
+
 						<div class="portfolio__content grid swiper-slide">
-							<img src="assets/img/portfolio3.png" class="portfolio__img" />
+							<img src="assets/img/portfolio5.png" class="portfolio__img" />
 
 							<div class="portfolio__data">
-								<h3 class="portfolio__title">Language Translator</h3>
-								<p class="portfolio__description">
-									This language translator web app is a user-friendly tool built
-									with HTML, CSS, and JavaScript. It leverages Google Translate
-									API to seamlessly translate text between multiple languages.
-									The app features a simple interface, ensuring smooth
-									performance across devices..
-								</p>
+								<h3 class="portfolio__title">Larajobs</h3>
+
+								<ul class="services__modal-services grid">
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+
+										<p style="margin-left: 0.5rem">
+											A Laravel 9 web application to apply for jobs using
+											Tailwind CSS to manage the layout
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Guests can see the listings and filter them (search and/or
+											tags) with pagination implemented
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											User can only edit and delete their posted jobs
+										</p>
+									</li>
+									<li class="services__modal-service">
+										<i class="uil uil-check-circle services__moda-icon"></i>
+										<p style="margin-left: 0.5rem">
+											Logged in users can see their name on top with a page for
+											their posted jobs and a logout button
+										</p>
+									</li>
+								</ul>
+
 								<a
-									href="https://github.com/Venkateeshh/Js-Language-Translator"
+									style="margin-top: 2rem; margin-right: 0.5rem"
+									target="_blank"
+									href="https://github.com/Mohamed-Ebeid/Larajobs"
 									class="button button--flex button--small portfolio__button"
 								>
 									GitHub Repository
 									<i class="uil uil-external-link-alt button__icon"></i>
 								</a>
 								<a
-									href="https://venkateeshh.github.io/Js-Language-Translator/"
-									class="button button--flex button--small portfolio__button"
-								>
-									See Live
-									<i class="uil uil-external-link-alt button__icon"></i>
-								</a>
-							</div>
-						</div>
-
-						<!-- ------------------------portfollio 5-------------------- -->
-						<div class="portfolio__content grid swiper-slide">
-							<img src="assets/img/portfolio4.png" class="portfolio__img" />
-
-							<div class="portfolio__data">
-								<h3 class="portfolio__title">Sorting Visualizer</h3>
-								<p class="portfolio__description">
-									Sorting Visualizer is a Java-based project that allows users
-									to visualize various sorting algorithms in action using a
-									Graphical User Interface (GUI). It provides an interactive and
-									educational way to understand how different sorting algorithms
-									work by visually demonstrating their step-by-step sorting
-									process.
-								</p>
-								<a
-									href="https://github.com/Venkateeshh/Sorting-Visualizer"
-									class="button button--flex button--small portfolio__button"
-								>
-									GitHub Repository
-									<i class="uil uil-external-link-alt button__icon"></i>
-								</a>
-								<a
-									href="https://www.linkedin.com/posts/venkatesh-kamath-_algorithmdesign-sortingvisualizer-javaprojects-activity-7095437035125043200-fWDl?utm_source=share&utm_medium=member_desktop"
+									target="_blank"
+									href="https://larajobs.vercel.app/"
 									class="button button--flex button--small portfolio__button"
 								>
 									See Live
