--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 	<body>
 		<h1>Hello there</h1>
 		<div align="center">
-			<a href="/portfolio01-main/" target="_blank">portfolio01-main</a><br />
-			<a href="/portfolio02-secondry/" target="_blank">portfolio02-secondry</a
-			><br />
-			<a href="/portfolio03-vcard/" target="_blank">portfolio03-vcard</a><br />
-			<a href="/freelancer01-red/" target="_blank">freelancer01-red</a><br />
-			<a href="/freelancer02-purple/" target="_blank">freelancer02-purple</a
-			><br />
+			<div style="margin-bottom: 1rem">
+				<a href="/portfolio01-main/" target="_blank">portfolio01-main</a><br />
+			</div>
+			<div style="margin-bottom: 1rem">
+				<a href="/portfolio02-secondry/" target="_blank"
+					>portfolio02-secondry</a
+				>
+			</div>
+			<div style="margin-bottom: 1rem">
+				<a href="/portfolio03-vcard/" target="_blank">portfolio03-vcard</a
+				><br />
+			</div>
+			<div style="margin-bottom: 1rem">
+				<a href="/freelancer01-red/" target="_blank">freelancer01-red</a><br />
+			</div>
+			<div style="margin-bottom: 1rem">
+				<a href="/freelancer02-purple/" target="_blank">freelancer02-purple</a>
+			</div>
+			<br />
+			<br />
 		</div>
 	</body>
 </html>
